Fix footer z-index

--- a/_assets/stylesheets/app.sass
+++ b/_assets/stylesheets/app.sass
@@ -89,6 +89,7 @@ footer
   background-image: url(image_path('blurry_garden.png'))
   position: relative
   padding: 1em
+  z-index: 0
 
   p
     margin: 0 0 1em 0
@@ -117,6 +118,7 @@ footer
     left: 0
     top: 0
     content: ''
+    z-index: -1
 
   .column
     @include span(4)
